tests/ui/force-inlining/gate.stderr
error[E0658]: #[rustc_force_inline] forces a free function to be inlined
  --> $DIR/gate.rs:4:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #[rustc_force_inline] forces a free function to be inlined
  --> $DIR/gate.rs:9:1
   |
LL | #[rustc_force_inline = "the test requires it"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
